# EZ-Assignment

./: .env  README.md  alembic.ini  env.example  package-lock.json  package.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2b42f1404725_add_reset_token_column_to_users_table.py
app/: database.py  main.py
app/models/: __init__.py  file.py  user.py
app/routes/: __init__.py  auth.py  client.py  file_ops.py
app/schemas/: file.py  user.py
app/utils/: __init__.py  auth.py  email.py  encryption.py  file_validation.py
backend/: app.py  requirements.txt  test_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Dashboard.jsx  FileCard.jsx  ForgotPassword.jsx  GlassCard.jsx  Login.jsx  Navbar.jsx  ProtectedRoute.jsx  Register.jsx  ResetPassword.jsx  Signup.jsx  Upload.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Register.jsx  Signup.jsx  Upload.jsx
frontend/src/router/: RouterConfig.jsx
frontend/src/services/: api.js
frontend/src/utils/: api.js
