[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-file-sharing"
version = "0.1.0"
description = "A secure file sharing system"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "pydantic[email]"
] 